@@ -235,7 +235,7 @@ Ns_ConnConstructHeaders(Ns_Conn *conn, Ns_DString *dsPtr)
  *
  * Ns_ConnFlushHeaders --
  *
- *	Spit out a well-formed set of HTTP headers with the given 
+ *	Send out a well-formed set of HTTP headers with the given 
  *	status. 
  *
  * Results:
@@ -599,7 +599,7 @@ Ns_ConnReturnAdminNotice(Ns_Conn *conn, int status, char *title, char *notice)
  *	See Ns_ReturnHtml. 
  *
  * Side effects:
- *	Will add lots of HTML to make your notice look nice. 
+ *	None.
  *
  *----------------------------------------------------------------------
  */
@@ -615,19 +615,15 @@ Ns_ConnReturnNotice(Ns_Conn *conn, int status, char *title, char *notice)
         title = "Server Message";
     }
     Ns_DStringVarAppend(&ds,
-	"<html>\n"
-	"<head>\n"
-	"<title>", title, "</title>\n"
-	"</head>"
-	"<body>\n"
-	"<h2>", title, "</h2>\n"
-	"<hr>", NULL);
+			"<!DOCTYPE HTML PUBLIC \"-//IETF//DTD HTML 2.0//EN\">\n"
+			"<HTML><HEAD>\n"
+			"<TITLE>", title, "</TITLE>\n"
+			"</HEAD><BODY>\n"
+			"<H2>", title, "</H2>\n", NULL);
     if (notice != NULL) {
     	Ns_DStringVarAppend(&ds, notice, "\n", NULL);
     }
-    Ns_DStringAppend(&ds,
-	"</body>\n"
-	"</html>\n");
+    Ns_DStringAppend(&ds, "</BODY></HTML>\n");
 
     result = Ns_ReturnHtml(conn, status, ds.string, ds.length);
     Ns_DStringFree(&ds);
@@ -776,8 +772,8 @@ Ns_ConnReturnRedirect(Ns_Conn *conn, char *url)
         }
         Ns_DStringAppend(&ds, url);
         Ns_HeadersPut(conn, "Location", ds.string);
-	Ns_DStringVarAppend(&msg, "Page has moved <a href='", ds.string,
-			    "'>here</a>.", NULL);
+	Ns_DStringVarAppend(&msg, "<A HREF=\"", ds.string,
+			    "\">The requested URL has moved here.</A>", NULL);
 	result = Ns_ReturnNotice(conn, 302, "Redirection", msg.string);
     } else {
 	result = Ns_ReturnNotice(conn, 204, "No Content", msg.string);
@@ -815,11 +811,10 @@ Ns_ConnReturnBadRequest(Ns_Conn *conn, char *reason)
 	return result;
     }
     Ns_DStringInit(&ds);
-    Ns_DStringAppend(&ds, "The HTTP request was in an invalid format "
-		     "or contained invalid data.");
+    Ns_DStringAppend(&ds,
+		     "The HTTP request presented by your browser is invalid.");
     if (reason != NULL) {
-        Ns_DStringVarAppend(&ds, " Reason:<blockquote>", reason,
-			    "</blockquote>", NULL);
+        Ns_DStringVarAppend(&ds, "<P>\n", reason, NULL);
     }
     result = Ns_ReturnNotice(conn, 400, "Invalid Request", ds.string);
     Ns_DStringFree(&ds);
@@ -859,8 +854,8 @@ Ns_ConnReturnUnauthorized(Ns_Conn *conn)
     Ns_DStringFree(&ds);
 
     return Ns_ReturnNotice(conn, 401, "Access Denied",
-            "You are not authorized to access the requested URL.  "
-            "Please enter an authorized username and password.");
+			   "The requested URL requires a "
+			   "valid username and password.");
 }
 
 
@@ -889,7 +884,7 @@ Ns_ConnReturnForbidden(Ns_Conn *conn)
 	return result;
     }
     return Ns_ReturnNotice(conn, 403, "Forbidden",
-        "The requested URL cannot be accessed by this server.");
+			   "The requested URL cannot be accessed.");
 }
 
 
@@ -918,7 +913,7 @@ Ns_ConnReturnNotFound(Ns_Conn *conn)
 	return result;
     }
     return Ns_ReturnNotice(conn, 404, "Not Found",
-        "The requested URL was not found on this server.");
+			   "The requested URL was not found.");
 }
 
 
@@ -970,7 +965,7 @@ Ns_ConnReturnNotImplemented(Ns_Conn *conn)
 	return result;
     }
     return Ns_ReturnNotice(conn, 501, "Not Implemented",
-        "The requested URL can not be implemented by this server.");
+			   "The requested URL is not implemented.");
 }
 
 
@@ -1000,8 +995,8 @@ Ns_ConnReturnInternalError(Ns_Conn *conn)
 	return result;
     }
     return Ns_ReturnNotice(conn, 500, "Server Error",
-        "The server encountered a configuration or operating system error "
-        "while attempting to satisfy your request.");
+			   "The requested URL cannot be accessed "
+			   "due to a system error.");
 }
 
 
